# solvedacbot

./: .gitignore  Cargo.toml  LICENSE  README.md  wrangler.example.toml  wrangler.toml
.github/workflows/: deploy.yml
src/: command.rs  db.rs  formatter.rs  lib.rs  solved.rs
