[package]
name = "solvedacbot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
telbot-cf-worker = { git = "https://github.com/kiwiyou/telbot" }
wee_alloc = { version = "0.4.2", optional = true }
worker = "0.0.6"

[profile.release]
opt-level = "s"
