[package]
name = "solvedacbot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
telbot-cf-worker = { git = "https://github.com/kiwiyou/telbot" }
web-sys = { version = "0.3.55", features = ["console"] }
worker = "0.0.6"

[profile.release]
opt-level = "s"

[features]
