[package]
name = "solvedacbot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
console_error_panic_hook = "0.1.7"
image = "0.23.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
telbot-cf-worker = { git = "https://github.com/kiwiyou/telbot", branch = "fix-bad-request" }
web-sys = { version = "0.3.55", features = ["console"] }
worker = { git = "https://github.com/kiwiyou/workers-rs" }

[patch.crates-io]
worker = { git = "https://github.com/kiwiyou/workers-rs" }

[profile.release]
opt-level = "s"

[features]
